kustomize/base/httproute-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demoapp-gw-redirect
spec:
  parentRefs:
  - name: envoyproxy
    namespace: demoapp-gw
    sectionName: http
  hostnames:
  - "cymbal.sctp-sandbox.com"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
