kustomize/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demoapp-gw
spec:
  parentRefs:
  - name: envoyproxy
    namespace: demoapp-gw
    sectionName: https
  hostnames:
  - "cymbal.sctp-sandbox.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: "Strict-Transport-Security"
          value: "max-age=63072000; includeSubdomains; preload"
    backendRefs:
    - name: frontend
      namespace: demoapp
      port: 80
